Fix bad list padding on firefox

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -18,7 +18,7 @@ nav_exclude: true
 
 // Global Resets
 //
-* { margin: 0; padding: 0; }
+// * { margin: 0; padding: 0; }
 
 /* clearfix hack after Cederholm (group class name) */
 .group:after {
